--- a/index.yaml
+++ b/index.yaml
@@ -14,3 +14,9 @@ indexes:
   ancestor: yes
   properties:
   - name: date
+
+- kind: Diary
+  ancestor: yes
+  properties:
+  - name: date
+    direction: desc
